--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 </div>
 <script>
 
+// https://www.goldapi.io/dashboard - barter/misc/_token.txt
 let db = {
     "half": {"fract": .50, "count": 0, "price": 0, "total": 0},
     "quar": {"fract": .25, "count": 0, "price": 0, "total": 0}, 
@@ -84,7 +85,6 @@ let db = {
   headers: myHeaders,
   redirect: 'follow'
 };
-// https://www.goldapi.io/dashboard
 
 function render(){
   let evt = document.createEvent("HTMLEvents");
