--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <tr><td><button>+</button></td><td id="quar" class="face">1</td><td><button>-</button></td><td>×</td><td id="quar_price">5.30</td><td>=</td><td id="quarter_total">5.30</td></tr>  
 <tr><td colspan="7"><img id="dime_img" src="dime-roosevelt.png"></td></tr>
 <tr><td><button>+</button></td><td id="dime" class="face">1</td><td><button>-</button></td><td>×</td><td id="dime_price">2.12</td><td>=</td><td id="dime_total">2.12</td></tr>  
+<tr><td colspan="7">&nbsp;</td></tr>
 <tr><td colspan="7">
   <div class="l">Face:<div id="face_total"></div></div>
   <div class="l">ozt:<div id="troy_ounce">2.1</div></div>
