--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="favicon-512.png">
   <title>Barter</title>
   <style>
-    #container {display: block; max-width: 480px; padding-bottom:34px;}
+    #container {display: block; max-width: 480px;}
     body {font-size: 24px; font-family: Helvetica;}
     input[type="text"] {font-size:24px; width: 90px; text-align: right; padding-right: 8px; border-radius: 6px; border-width: 1px;}
     .warn {background-color: #E6E6FA;}
@@ -82,7 +82,7 @@
   <div class="r">Total:<div id="grand_total"></div></div></td></tr>
   <!-- https://codepen.io/alexandredees/pen/DbXggK -->
 </table>
-</div>
+  </div><div style="height:38px;"></div>
 <script>
 
 // https://www.goldapi.io/dashboard - barter/misc/_token.txt
