--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="l">ozt:<div id="troy_ounce">2.1</div></div>
   <div class="r">Total:<div id="grand_total"></div></div></td></tr>
   <!-- https://codepen.io/alexandredees/pen/DbXggK -->
-</table></div><div>&nbsp;</div>
+</table><div style="height:38px;"></div></div>
 <script>
 
 // https://www.goldapi.io/dashboard - barter/misc/_token.txt
