--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
   <div class="l">Face:<div id="face_total"></div></div>
   <div class="l">ozt:<div id="troy_ounce">2.1</div></div>
   <div class="r">Total:<div id="grand_total"></div></div></td></tr>
+<tr><td colspan="7">&nbsp;</td></tr>
   <!-- https://codepen.io/alexandredees/pen/DbXggK -->
-</table><div style="font-size:38px;">&nbsp;</div></div>
+</table></div>
 <script>
 
 // https://www.goldapi.io/dashboard - barter/misc/_token.txt
