--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     table {
       background-image: url("cover.jpg");
       background-color: rgba(255,255,255,0.7);
-      background-size: cover;
+      background-size: content;
       background-blend-mode: lighten;
       margin: auto;
     }
