--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     table {
       background-image: url("cover.jpg");
       background-color: rgba(255,255,255,0.7);
-      background-size: contain;
-      background-repeat: no-repeat;
+/*      background-size: contain;
+        background-repeat: no-repeat;  */
       background-blend-mode: lighten;
       margin: auto;
     }
