--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     #face_total, #troy_ounce, #grand_total {padding: 0 10px;}
     table {
       background-image: url("cover.jpg");
+      background-size: 100% 100%;
       background-color: rgba(255,255,255,0.7);
 /*      background-size: contain;
         background-repeat: no-repeat;  */
