--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     table {
       background-image: url("cover.jpg");
       background-size: 100% 100%;
-/*      background-color: rgba(255,255,255,0.7);
-        background-size: contain;
-        background-repeat: no-repeat;  */
+      background-color: rgba(255,255,255,0.7);
       background-blend-mode: lighten;
+/*      background-size: contain;
+        background-repeat: no-repeat;  */
       margin: auto;
     }
     div, h2 {display: inline-block;}
