--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     td:nth-child(2) {min-width: 60px; padding: 0 10px; text-align: center;}
     td:nth-child(5) {min-width: 74px; padding: 0 10px;}
     td:nth-child(4) {padding-left: 10px;}
-    td:nth-child(7) 
-                    {min-width: 116px; padding: 0 10px;}
+    td:nth-child(7) {min-width: 116px; padding: 0 10px;}
+    tr:nth-child(8),tr:nth-child(10) {background-color: rgba(246,244,240,.9);}
     button {min-width: 32px;}
     button {min-width: 32px;}
     #half_img {display: block; margin:5px auto; height: 186px;}
