--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     #quar_img {display: block; margin:5px auto; height: 147px;}
     #dime_img {display: block; margin:5px auto; height: 109px;}
     #face_total, #troy_ounce, #grand_total {padding: 0 10px;}
+    #price, #prem {margin-top: 5px;}
     table {
       background-image: url("cover.jpg");
       background-size: 100% 100%;
