--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     }
     #prem-hd {float:left; margin-left:150px; font-size:24px; font-weight:bold;}
     #premium                   {background-color: white; border-radius:50%;font-size: 12px; margin:15px 0 0 40px; width:12px; height:12px; float: left; border:1px solid black;}
-    #premium.toggled           {background-color: #FFEA00;}
+    #premium.toggled           {background-color: #FFD700;}
     #gold.toggled              {background-color: #FFEA00;}
     #rnd.toggled, #ken.toggled {background-color: #F8C8DC;}
     #rnd,         #ken         {background-color: #F0F0F0;}
@@ -82,7 +82,7 @@
     @media only screen and (max-width: 500px) {
       h2 {margin: 10px;}
       #dollar  {font-size: 12px; vertical-align: text-bottom; margin-top: 20px;}
-      #premium {width:14px; height:14px;}
+      #premium {width:16px; height:16px;}
     }
   </style>
 </head>
